--- a/Ship-Fit/Ship-Fit/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Ship-Fit/Ship-Fit/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="4">
     <dependencies>
-        <deployment defaultVersion="1552" identifier="iOS"/>
         <development version="4600" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -360,14 +359,18 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" id="PQf-U9-6kC">
-                                <rect key="frame" x="18" y="763" width="732" height="23"/>
+                                <rect key="frame" x="53" y="903" width="663" height="23"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="pause_explosion:" destination="Nwe-nv-25i" eventType="touchDown" id="V0M-7Y-cis"/>
+                                </connections>
                             </slider>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="UgL-aS-5xB">
-                                <rect key="frame" x="195" y="821" width="172" height="115"/>
+                            <button opaque="NO" tag="12" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="UgL-aS-5xB">
+                                <rect key="frame" x="322" y="752" width="125" height="125"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="RESTART">
+                                <state key="normal" backgroundImage="button_black_play.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -375,14 +378,14 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="restart_explosion:" destination="Nwe-nv-25i" eventType="touchUpInside" id="dNJ-XD-dNX"/>
+                                    <action selector="play_explosion:" destination="Nwe-nv-25i" eventType="touchUpInside" id="cEz-Ge-0uu"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="KlV-yX-tKV">
-                                <rect key="frame" x="10" y="821" width="172" height="115"/>
+                            <button opaque="NO" tag="11" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Kgr-9q-tf9">
+                                <rect key="frame" x="322" y="752" width="125" height="125"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="GO BACK 1 HR">
+                                <state key="normal" backgroundImage="button_black_pause.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -390,41 +393,11 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="go_back_one:" destination="Nwe-nv-25i" eventType="touchUpInside" id="wkc-JP-xtv"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="2NE-bo-ce5">
-                                <rect key="frame" x="576" y="821" width="172" height="115"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="GO AHEAD 1 HOUR">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="go_forward_one:" destination="Nwe-nv-25i" eventType="touchUpInside" id="Snr-vr-N8o"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Kgr-9q-tf9">
-                                <rect key="frame" x="387" y="821" width="172" height="115"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="PAUSE">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="pause_explosion:" destination="Nwe-nv-25i" eventType="touchUpInside" id="aTw-e1-dY2"/>
+                                    <action selector="pause_explosion:" destination="Nwe-nv-25i" eventType="touchUpInside" id="LsB-yi-21X"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Weather" id="rkG-HW-VD3"/>
                     <connections>
@@ -433,10 +406,13 @@
                         <outlet property="cloudCover" destination="FCg-uy-d0O" id="809-JL-57Z"/>
                         <outlet property="cloudcoverImage" destination="c8M-sn-1tk" id="6p6-DL-jBE"/>
                         <outlet property="conditionImage" destination="ckS-dU-a01" id="5nt-df-6f6"/>
+                        <outlet property="pause_button" destination="Kgr-9q-tf9" id="AAe-WD-vQo"/>
+                        <outlet property="play_button" destination="UgL-aS-5xB" id="LKM-ph-NZE"/>
                         <outlet property="popImage" destination="M9s-2z-3ru" id="5ac-N0-4B7"/>
                         <outlet property="precipitation" destination="zLe-Qp-8S5" id="Fdt-zk-703"/>
                         <outlet property="pressure" destination="coq-XH-P3b" id="RnT-7J-S71"/>
                         <outlet property="pressureImage" destination="A3Q-JL-gVd" id="MTt-BC-3xj"/>
+                        <outlet property="slider" destination="PQf-U9-6kC" id="s0O-so-YKh"/>
                         <outlet property="tempImage" destination="ChC-SW-fX5" id="k1e-P7-L8J"/>
                         <outlet property="temperatureCurrent" destination="efE-GM-ENQ" id="7K5-Hp-dLq"/>
                         <outlet property="time" destination="hx4-lx-dLG" id="gIT-z3-8l1"/>
@@ -489,8 +465,74 @@
         </scene>
     </scenes>
     <resources>
+        <image name="button_black_pause.png" width="128" height="128"/>
+        <image name="button_black_play.png" width="128" height="128"/>
         <image name="first" width="16" height="16"/>
     </resources>
+    <classes>
+        <class className="DatabaseArticleViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DatabaseArticleViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="txtTitle" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="wvMainText" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="DatabaseMainViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DatabaseMainViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="databaseSearchBar" candidateClass="UISearchBar"/>
+            </relationships>
+        </class>
+        <class className="MapViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="togglePathAction:"/>
+                <relationship kind="action" name="zoomChange:"/>
+                <relationship kind="action" name="zoomToMe:"/>
+                <relationship kind="outlet" name="compDegLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="compDirLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="latLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="longLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
+                <relationship kind="outlet" name="speedLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="sunLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="tempHighLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="tempLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="tempLoLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="windDirLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="windLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="zoomInButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="zoomOutButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="WeatherViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WeatherViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="pause_explosion:"/>
+                <relationship kind="action" name="play_explosion:"/>
+                <relationship kind="outlet" name="additionalInfo" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="calendarImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="cloudCover" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="cloudcoverImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="conditionImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="pause_button" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="play_button" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="popImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="precipitation" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="pressure" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="pressureImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="slider" candidateClass="UISlider"/>
+                <relationship kind="outlet" name="tempImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="temperatureCurrent" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="time" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="visImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="visibility" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="windDirection" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="windImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="windSpeed" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
