--- a/Ship-Fit/Ship-Fit/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Ship-Fit/Ship-Fit/en.lproj/MainStoryboard_iPhone.storyboard
@@ -29,22 +29,17 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="rsA-Gc-ZMi">
-                                <rect key="frame" x="75" y="413" width="74" height="44"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Path">
-                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="rsA-Gc-ZMi">
+                                <rect key="frame" x="66" y="414" width="84" height="42"/>
+                                <state key="normal" image="pathinactive.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="togglePathAction:" destination="2" eventType="touchUpInside" id="AhX-4J-Ati"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="HlY-Eu-jn2">
-                                <rect key="frame" x="20" y="413" width="46" height="49"/>
+                                <rect key="frame" x="20" y="410" width="46" height="49"/>
                                 <state key="normal" title="ME" image="locationinactive.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -162,10 +157,14 @@
                                 <rect key="frame" x="20" y="20" width="56" height="51"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="dAB-qT-yeH">
+                                <rect key="frame" x="244" y="136" width="56" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Map" image="map.png" id="7"/>
+                    <tabBarItem key="tabBarItem" title="Map" image="map" id="7"/>
                     <connections>
                         <outlet property="compDegLabel" destination="DkJ-4m-rnd" id="gdT-jX-4Cw"/>
                         <outlet property="compDirLabel" destination="H2G-7K-1hC" id="Jvv-AL-YGt"/>
@@ -174,6 +173,7 @@
                         <outlet property="longLabel" destination="ak1-fR-8eO" id="nA6-x0-YPY"/>
                         <outlet property="pathButton" destination="rsA-Gc-ZMi" id="2Ip-m4-6gV"/>
                         <outlet property="speedLabel" destination="Gp5-zY-g1n" id="xMi-uj-Hsp"/>
+                        <outlet property="sunImage" destination="dAB-qT-yeH" id="HGP-np-fJj"/>
                         <outlet property="sunLabel" destination="ex7-1Z-3RE" id="lvu-rZ-QQd"/>
                         <outlet property="tempHighLabel" destination="56C-xh-xvh" id="u2J-ne-wn3"/>
                         <outlet property="tempLabel" destination="iec-qp-ptj" id="afA-EV-JX3"/>
@@ -458,7 +458,8 @@
         <image name="button_black_pause.png" width="128" height="128"/>
         <image name="button_black_play.png" width="128" height="128"/>
         <image name="locationinactive.png" width="255" height="256"/>
-        <image name="map.png" width="30" height="30"/>
+        <image name="map" width="255" height="256"/>
+        <image name="pathinactive.png" width="66" height="71"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
